# toko-rs

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  docker-compose.yml
docs/: audit-correction.md  audit-master-checklist.md  audit-p1-task12.md  audit-p1-task14.md  audit-p1-task18.md  audit-p1-task19-verification.md  audit-p1-task19.md  audit-p1-task20.md  audit-p1-task21.md  audit-p1-task22.md  audit-p1-task23.md  audit-p1-task24.md  audit-p1-task25.md  audit-p1-task26.md  audit-p1-task27.md  audit-p1-task28.md  audit-p1-task29.md  audit-p1-task30.md  audit-p1-task31.md  audit-p1-task32.md  audit-p1-task33.md  audit-p1-task34.md  cart-module.md  customer-module.md  database-ext-sqlite.md  database-foundation.md  database-test.md  database.md  order-module.md  product-module.md  project-scaffold.md  seed-data.md  test-e2e.md  test-suite.md  testing.md
docs/planning/: implementation_plan.md  medusa_api_analysis.md  medusa_database_analysis.md  task.md  toko_rs_api_contract.md  toko_rs_crate_evaluation.md  toko_rs_final_schema.md
migrations/: 001_products.sql  002_customers.sql  003_carts.sql  004_orders.sql  005_payments.sql  006_idempotency.sql  006_order_lifecycle.sql  007_invoice_config.sql
migrations/sqlite/: 001_products.sql  003_carts.sql  (+6 more)
openspec/: config.yaml
scripts/: init-dbs.sh
specs/: admin.oas.yaml
src/: config.rs  db.rs  error.rs  extract.rs  lib.rs  main.rs  seed.rs  types.rs
tests/: cart_test.rs  contract_test.rs  customer_test.rs  health_test.rs  invoice_test.rs  order_test.rs  product_test.rs  seed_flow_test.rs
(+45 files in other folders)
