[package]
name = "toko-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "A modular, high-performance headless e-commerce backend inspired by MedusaJS"
repository = "https://github.com/oonid/toko-rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [] }

[dependencies]
# Web
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "any",          # SQLite/PostgreSQL dual-driver support
    "sqlite",
    "postgres",
    "chrono",       # DateTime support
    "json",         # JSON field support
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Utilities
ulid = "1"
slug = "0.1" 
dotenvy = "0.15"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
envy = "0.4.2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3"
wiremock = "0.6"
assert-json-diff = "2"
